1.7 (*)
  * Fixed documentation of 'ci.coords' with examples
  * Faster algorithm for DeLong 'roc.test', 'power.roc.test', 'ci.auc', 'var' and 'cov' function (no large matrix allocation).
  * Handling Math and operations correctly on 'auc' and 'ci' objects (see '?groupGeneric.pROC')

1.6.0.1 (2013-12-28)
  * Removed erroneous error message displayed when predictors and responses were not vectors

1.6 (2013-12-26)
  * New 'power.roc.test' function for sample size and power computations
  * New 'cov' and 'var' functions supports new "obuchowski" method
  * New 'ci.coords' function to compute CI of arbitrary coords
  * 'coords' accepts new 'ret' value "1-accuracy"
  * Introducing various algorithms to compute sensitivities and specificites, with a more vectorized code or Rcpp. See 'algorithm' in ?roc for more details on the trade-offs of the different methods.
  * Faster algorithm for DeLong 'roc.test', 'ci', 'var' and 'cov' function (thanks Kazuki Yoshida).
  * 'are.paired' now also checks for identical 'levels'
  * Fixed a warning generated in the examples
  * Fixed several bugs related with 'smooth.roc' curves
  * Additional input data sanity checks
  * Now requires R >= 2.13 (in fact, since 1.5.1, thanks Emmanuel Curis for the report)
  * Progress bars now defaults to text on Macs where 'tcltk' seems broken (thanks Gerard Smits for the report)

1.5.4 (2012-08-31)
  * Running less smooth.roc examples with logcondens because they take too much time (requested by Uwe Ligges)

1.5.3 (2012-08-31)
  * AUC specification was lost when roc.test, cov or var was passed an 'auc' object.
  * Correct computation of "accuracy" in 'coords' (thanks to Kosuke Yoshihara for the report)

1.5.1 (2012-03-09)
  * Faster loading of the package (thanks to Prof Brian Ripley and Glenn Lawyer for the report)

1.5 (2011-12-11)
  * New 'cov' and 'var' functions