@@ -22,28 +22,44 @@ roc <- function(...) {
 }
 
 roc.formula <- function (formula, data, ...){
-  cl <- match.call()
-  m <- match.call(expand.dots = FALSE)
-  if (is.matrix(eval(m$data, parent.frame())))
-    m$data <- as.data.frame(data)
-  m$... <- NULL
-  m[[1]] <- as.name("model.frame")
-  m <- eval(m, parent.frame())
-  term.labels <- attr(attr(m, "terms"), "term.labels")
-  response <- model.extract(m, "response")
+  predictors <- attr(terms(formula), "term.labels")
+  
+  
 
-  if (length(term.labels) != 1) {
-    stop("Invalid formula: exactly 1 predictor is required in a formula of type response~predictor.")
-  }
-  if (length(response) == 0) {
-    stop("Error in the formula: a response is required in a formula of type response~predictor.")
-  }
+  if (length(predictors) == 1) {
+    # Get response (it's complicated)
+    m <- match.call(expand.dots = FALSE)
+    if (is.matrix(eval(m$data, parent.frame())))
+      m$data <- as.data.frame(data)
+    m$... <- NULL
+    m[[1]] <- as.name("model.frame")
+    m <- eval(m, parent.frame())
+    response <- model.response(m)
 
-  roc <- roc.default(response, m[[term.labels]], ...)
-  roc$call <- match.call()
-  if (!is.null(roc$smooth))
-    attr(roc, "roc")$call <- roc$call
-  return(roc)
+    if (length(response) != nrow(data)) {
+      stop("Error in the formula: exactly 1 response is required in a formula of type response~predictor.")
+    }
+
+    roc <- roc.default(response, m[[predictors]], ...)
+    roc$call <- match.call()
+    if (!is.null(roc$smooth))
+      attr(roc, "roc")$call <- roc$call
+    return(roc)
+  }
+  else if (length(predictors) > 1) {
+    roclist <- lapply(predictors, function(predictor, formula, data, dataName, ...) {
+      formula[3] <- call(predictor) # replace the predictor in formula
+      roc <- roc.formula(formula, data, ...)
+      roc$call$data = dataName # Replace original name of the data
+      roc$call$formula = formula # Replace modified formula
+      return(roc)
+    }, formula = formula, data = data, dataName = match.call(expand.dots = FALSE)[["data"]], ...)
+    names(roclist) <- predictors
+    return(roclist)
+  }
+  else {
+    stop("Invalid formula:at least 1 predictor is required in a formula of type response~predictor.")
+  }
 }
 
 roc.default <- function(response, predictor,
